<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sobot_color_bg_first"
    android:gravity="center"
    android:orientation="vertical">

    <!-- 显示加载文字的动画 -->
    <ImageView
        android:id="@+id/sobot_icon_nonet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/sobot_icon_timeout" />

    <TextView
        android:id="@+id/sobot_textReConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:lineSpacingExtra="@dimen/sobot_text_line_spacing_extra"
        android:text="@string/sobot_str_timeout"
        android:textColor="@color/sobot_color_text_first"
        android:textSize="@dimen/sobot_text_font_20" />

    <TextView
        android:id="@+id/sobot_textReConnect_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:lineSpacingExtra="@dimen/sobot_text_line_spacing_extra"
        android:text="@string/sobot_str_timeout_reloading"
        android:textColor="@color/sobot_color_text_third"
        android:textSize="@dimen/sobot_text_font_14" />

    <Button
        android:id="@+id/sobot_btn_reconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/sobot_button_style"
        android:lineSpacingExtra="@dimen/sobot_text_line_spacing_extra"
        android:minWidth="240dp"
        android:paddingStart="15dp"
        android:paddingTop="9dp"
        android:paddingEnd="15dp"
        android:paddingBottom="9dp"
        android:text="@string/sobot_reunicon"
        android:textAllCaps="false"
        android:textColor="@color/sobot_color_text_first"
        android:textSize="@dimen/sobot_text_font_14" />
</LinearLayout>