<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sobot_color_bg_first"
    android:orientation="vertical">

    <include
        android:id="@+id/tl_titlebar"
        layout="@layout/sobot_layout_common_titlebar" />

    <!--列表-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sobot_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:overScrollMode="never" />

    <LinearLayout
        android:id="@+id/sobot_ticket_bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sobot_color_bg_first"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="@dimen/sobot_msg_margin_edge"
            android:layout_marginStart="@dimen/sobot_msg_margin_edge"
            android:background="@drawable/sobot_btn_bg_reply"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/sobot_ticket_reply"
            android:textColor="@color/sobot_ticket_detail_reply_text"
            android:textSize="@dimen/sobot_text_font_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sobot_ticket_success_bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sobot_color_dialog_bg"
        android:orientation="vertical"
        android:elevation="8dp"
        android:outlineSpotShadowColor="@color/sobot_color_shadow"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:text="@string/sobot_ticket_finish"
            android:textColor="@color/sobot_color_text_second"
            android:textSize="@dimen/sobot_text_font_14" />

        <LinearLayout
            android:id="@+id/h_bottom_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/sobot_msg_margin_edge"
            android:paddingEnd="@dimen/sobot_msg_margin_edge"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/sobot_evaluate_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/sobot_btn_bg_help_center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/sobot_icon_zan_def" />

                <TextView
                    android:id="@+id/sobot_evaluate_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/sobot_str_bottom_satisfaction"
                    android:textColor="@color/sobot_color_text_first"
                    android:textSize="@dimen/sobot_text_font_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sobot_reply_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sobot_btn_bg_help_center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/sobot_help_bottom_chat" />

                <TextView
                    android:id="@+id/sobot_reply_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/sobot_reply"
                    android:textColor="@color/sobot_color_text_first"
                    android:textSize="@dimen/sobot_text_font_14" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_bottom_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:paddingStart="@dimen/sobot_msg_margin_edge"
            android:paddingEnd="@dimen/sobot_msg_margin_edge"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/sobot_evaluate_v"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sobot_btn_bg_help_center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/sobot_icon_zan_def" />

                <TextView
                    android:id="@+id/v_sobot_evaluate_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/sobot_str_bottom_satisfaction"
                    android:textColor="@color/sobot_color_text_first"
                    android:textSize="@dimen/sobot_text_font_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sobot_reply_v"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/sobot_btn_bg_help_center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/sobot_help_bottom_chat" />

                <TextView
                    android:id="@+id/v_sobot_reply_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/sobot_reply"
                    android:textColor="@color/sobot_color_text_first"
                    android:textSize="@dimen/sobot_text_font_14" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>